fixed menu overlay on tablet devices

--- a/src/main/webapp/styles/eprtr-custom.css
+++ b/src/main/webapp/styles/eprtr-custom.css
@@ -803,3 +803,8 @@ label.simple{
     }
 }
 
+@media(min-width: 768px)and(max-width: 1111px) {
+    body > #container {
+        margin-top: 5rem;
+    }
+}
